unit test: user, register
